--- a/css/estilo.css
+++ b/css/estilo.css
@@ -122,7 +122,7 @@ footer {
 
 @media (max-width: 768px) {
     #image img {
-        width: 90%;
+        width: 100%;
     }
 }
 
@@ -132,6 +132,17 @@ footer {
     }
 }
 
+@media (max-width: 768px) {
+    #text {
+        width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+    #text {
+        width: 100%;
+    }
+}
 @media (max-width: 768px) {
     #image {
         order: 1;
